# conan_assimp_test

./: CMakeLists.txt  README.md  conanfile.py
.conan/profiles/: build_profile
src/: CMakeLists.txt  colorspace.cpp
src/alicevision/system/: CMakeLists.txt
